--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,83 +2,40 @@
 name: Deploy
 
 on:
-   push:
-      branches:
-         - main
+  push:
+    branches:
+      - main
 
 jobs:
-   deploy:
-      runs-on: ubuntu-latest
-      steps:
-         - uses: actions/checkout@v4
-           with:
-              fetch-depth: 0
-         - uses: actions/setup-node@v4
-           with:
-              node-version: 20
-              cache: npm
-         - run: npm install --frozen-lockfile
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-         - name: Build
-           run: npm run build
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
 
-         - name: Deploy
-            # 将构建产物 commit 到一个分支上，用于发布静态站点资源
-            # https://github.com/peaceiris/actions-gh-pages
-            #不要将peaceiris改为自己的仓库名，我单纯的以为这个需要改成自己的仓库名，部署上去就build失败了，需引用该仓库的配置
-           uses: peaceiris/actions-gh-pages@v3
-           with:
-              # Github 会在 workflow 中自动生成 GIHUBT_TOKEN，用于认证 workflow 的运行
-              github_token: ${{ secrets.GITHUB_TOKEN }}
-              # 静态资源目录设置
-              publish_dir: .vitepress/dist
-              # 默认发布到 gh-pages 分支上，可以指定特定的发布分支（不能选拉取代码的分支）
-              publish_branch: gh-pages
-              full_commit_message: ${{ github.event.head_commit.message }}
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
 
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
 
+      - name: Build
+        run: pnpm --filter blogpress build
 
-#name: Deploy VitePress site to Pages
-#
-#on:
-#  push:
-#    # 推送任意tags或者main分支推送的时候触发任务
-#    tags:
-#      - '*'
-#    branches:
-#      - main
-#
-#  workflow_dispatch:
-#
-#jobs:
-#  deploy-and-sync:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout 🛎️
-#        uses: actions/checkout@v4
-#        with:
-#          ref: 'main'
-#
-#      - name: Install yarn
-#        run: corepack enable
-#
-#      - uses: actions/setup-node@v3
-#        with:
-#          node-version: '18'
-#          cache: 'yarn'
-#
-#      - name: Install dependencies
-#        run: yarn install
-#
-#      - name: Build Site
-#        run: npm run docs:build
-#
-#      # 将文档产物提交到gh-pages分支
-#      - name: Deploy for Github 🚀
-#        uses: JamesIves/github-pages-deploy-action@v4.4.1
-#        with:
-#          branch: gh-pages
-#          folder: .vitepress/dist
-#          # enable single-commit to reduce the repo size
-#          single-commit: true
-#          clean: true
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: packages/blogpress/.vitepress/dist
+          publish_branch: gh-pages
+          full_commit_message: ${{ github.event.head_commit.message }}
