--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,35 @@ jobs:
         run: pnpm --filter blogpress build
 
       - name: Disable Jekyll
-        run: touch packages/blogpress/.vitepress/dist/.nojekyll
+        run: |
+          touch packages/blogpress/.vitepress/dist/.nojekyll
+          # Also create .nojekyll in the root to ensure Jekyll is disabled
+          echo "" > packages/blogpress/.vitepress/dist/.nojekyll
+
+      - name: Clean gh-pages branch
+        run: |
+          # Remove any existing Jekyll-related files that might interfere
+          rm -rf packages/blogpress/.vitepress/dist/.jekyll-*
+          rm -rf packages/blogpress/.vitepress/dist/.jekyll-cache
+          rm -rf packages/blogpress/.vitepress/dist/_includes
+          rm -rf packages/blogpress/.vitepress/dist/_layouts
+          rm -rf packages/blogpress/.vitepress/dist/_posts
+          rm -rf packages/blogpress/.vitepress/dist/_config.yml
+          rm -rf packages/blogpress/.vitepress/dist/Gemfile
+          rm -rf packages/blogpress/.vitepress/dist/Gemfile.lock
+          # Remove any markdown source files that might have been copied
+          find packages/blogpress/.vitepress/dist -name "*.md" -type f -delete
+          # Remove any source directories
+          rm -rf packages/blogpress/.vitepress/dist/packages
+          # List contents for debugging
+          ls -la packages/blogpress/.vitepress/dist/
+
+      - name: Verify dist contents
+        run: |
+          echo "=== Dist directory structure ==="
+          find packages/blogpress/.vitepress/dist -type f | head -20
+          echo "=== Checking for .nojekyll ==="
+          ls -la packages/blogpress/.vitepress/dist/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
