refactor: 优化脚本管理方式
✨ 改进内容：
- 移除自动执行脚本，改为由 setup-git-scripts.sh 一键生成
- 更新 .gitignore，忽略本地生成的脚本和日志文件
- 更新 README，添加脚本生成说明
- 创建 setup-git-scripts.sh 生成器，用户拉取后可自行生成

📦 现在包含：
- setup-git-scripts.sh：脚本生成器
- README-SCRIPTS.md：完整使用指南
- DAILY-COMMIT-GUIDE.md：每日提交指南
- .gitignore：忽略本地生成的脚本

💡 使用方式：
1. 用户拉取代码
2. 运行 ./setup-git-scripts.sh 生成所有脚本
3. 选择守护进程或 Cron 模式

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,20 @@ packages/theme/node.mjs
 packages/theme/node.d.mts
 _pagefind
 .vite-inspect
+
+# Git 自动提交脚本（本地生成）
+# 运行 setup-git-scripts.sh 自动生成
+daily-auto-commit.sh
+setup-daily-cron.sh
+start-daemon.sh
+stop-daemon.sh
+test-daily-commit.sh
+install-global.sh
+
+# 日志文件
+daily-commit.log
+auto-commit-daemon.log
+auto-commit-daemon.pid
+
+# 备份文件
+*.backup
