--- a/packages/vitepress-plugin-rss/package.json
+++ b/packages/vitepress-plugin-rss/package.json
@@ -4,13 +4,13 @@
   "description": "vitepress plugin, generate feed.rss",
   "author": "sugar",
   "license": "MIT",
-  "homepage": "https://github.com/zhouxun0803/zx-vitepress-blog/tree/master/packages/vitepress-plugin-rss",
+  "homepage": "https://github.com/zhouxun0803/tree/master/packages/vitepress-plugin-rss",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zhouxun0803/zx-vitepress-blog.git"
+    "url": "git+https://github.com/zhouxun0803.git"
   },
   "bugs": {
-    "url": "https://github.com/zhouxun0803/zx-vitepress-blog/issues"
+    "url": "https://github.com/zhouxun0803/issues"
   },
   "keywords": [
     "vitepress",
