--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,37 +12,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: pnpm
 
       - name: Setup pnpm
         run: npm install -g pnpm
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_OUTPUT
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Build dependencies
         run: |
-          # Build all required plugins and theme for the blogpress package
           pnpm build:51la
           pnpm build:image-preview
           pnpm build:announcement
@@ -56,33 +40,10 @@ jobs:
 
       - name: Prepare deployment
         run: |
-          # Ensure .nojekyll exists in dist for gh-pages
           cp .nojekyll packages/blogpress/.vitepress/dist/.nojekyll
-
-      - name: Clean gh-pages branch
-        run: |
-          # Remove any existing Jekyll-related files that might interfere
-          rm -rf packages/blogpress/.vitepress/dist/.jekyll-*
-          rm -rf packages/blogpress/.vitepress/dist/.jekyll-cache
-          rm -rf packages/blogpress/.vitepress/dist/_includes
-          rm -rf packages/blogpress/.vitepress/dist/_layouts
-          rm -rf packages/blogpress/.vitepress/dist/_posts
-          rm -rf packages/blogpress/.vitepress/dist/_config.yml
-          rm -rf packages/blogpress/.vitepress/dist/Gemfile
-          rm -rf packages/blogpress/.vitepress/dist/Gemfile.lock
-          # Remove any markdown source files that might have been copied
+          rm -rf packages/blogpress/.vitepress/dist/.jekyll-* packages/blogpress/.vitepress/dist/_* packages/blogpress/.vitepress/dist/Gemfile*
           find packages/blogpress/.vitepress/dist -name "*.md" -type f -delete
-          # Remove any source directories
           rm -rf packages/blogpress/.vitepress/dist/packages
-          # List contents for debugging
-          ls -la packages/blogpress/.vitepress/dist/
-
-      - name: Verify dist contents
-        run: |
-          echo "=== Dist directory structure ==="
-          find packages/blogpress/.vitepress/dist -type f | head -20
-          echo "=== Checking for .nojekyll ==="
-          ls -la packages/blogpress/.vitepress/dist/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
