feat: 添加 CNAME 文件并确保每次部署时保留
- 创建 CNAME 文件，域名为 devzx.top
- 在部署流程中确保 CNAME 文件被复制到 gh-pages 分支
- 添加保护机制防止 CNAME 文件被意外删除

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,9 +54,13 @@ jobs:
       - name: Prepare deployment
         run: |
           cp .nojekyll packages/blogpress/.vitepress/dist/.nojekyll
+          cp CNAME packages/blogpress/.vitepress/dist/CNAME
           rm -rf packages/blogpress/.vitepress/dist/.jekyll-* packages/blogpress/.vitepress/dist/_* packages/blogpress/.vitepress/dist/Gemfile*
           find packages/blogpress/.vitepress/dist -name "*.md" -type f -delete
           rm -rf packages/blogpress/.vitepress/dist/packages
+          # 确保 CNAME 文件最后存在
+          find packages/blogpress/.vitepress/dist -name "CNAME" -type f -delete
+          cp CNAME packages/blogpress/.vitepress/dist/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
